--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-polyfill": "^6.26.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
